@@ -4,6 +4,9 @@
 # MPIR_CHKLMEM_ and MPIR_CHKPMEM_ macros are simplified, removing non-essential
   argument such as type case and custom error messages.
 
+# Rename MPIR_CVAR_DEBUG_PROGRESS_TIMEOUT to MPIR_CVAR_PROGRESS_TIMEOUT, and
+  enable it whether or not --enable-g=progress is used in configure.
+
 ===============================================================================
                                Changes in 4.3
 ===============================================================================
